--- a/EXBRIT.html
+++ b/EXBRIT.html
@@ -2,8 +2,8 @@
 <HEAD></HEAD>
 <body>
 Este es un texto normal
-<h1>HOLA MUNDO H1</h1>
-<h2>HOLA MUNDO H2</h2>
-<h3>ESTE ES TU MUNDO texto H3</h3>
+<h1>HOLA MUNDO</h1>
+<h2>HOLA MUNDO</h2>
+<h3>ESTE ES TU MUNDO</h3>
 </body>
 </HTML>
