--- a/EXBRIT.html
+++ b/EXBRIT.html
@@ -4,6 +4,6 @@
 Este es un texto normal
 <h1>HOLA MUNDO</h1>
 <h2>HOLA MUNDO</h2>
-<h3>ESTE ES TU MUNDO</h3>
+<h3>ESTE ES TU MUNDO XD</h3>
 </body>
 </HTML>
