--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@ Este es un texto normal
 <h1>Este es un texto H1</h1>
 <h2>Este es un texto H2</h2>
 <h3>Este es un texto H3</h3>
+<h2>Karol</h2>
+<h2>Yael</h2>
+<h2>Francisco Emiliano</h2>
+<h2>Yurem</h2>
+<h2>Angel Isaac</h2>
 </body>
 </HTML>
