--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ Este es un texto normal
 <h1>Este es un texto H1</h1>
 <h2>Este es un texto H2</h2>
 <h3>Este es un texto H3</h3>
+<h3>INTEGRANTES</h3>
 <h2>Karol Juarex Cuevas</h2>
 <h2>Yael Lopez Garcia</h2>
 <h2>Francisco Emiliano Guzman Martinez</h2>
